// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results block template Guided search journey Search results with empty data should match the results screen snapshot 1`] = `
"





  <div class='govuk-section-break--visible'>
    <h2 class='govuk-heading-m results-stats'>
      0 results found 
    </h2>

    <div class="option-container">
      


<div class="govuk-form-group option-group">
  <label class="govuk-label option-label" for="sort">
    Sort by
  </label>


  <select class="govuk-select option-block" id="sort" name="sort">
  
    
      
      
      <option value="best_match">Best match</option>
    
  
    
      
      
      <option value="recent_study">Most recent study</option>
    
  
  </select>
</div>

    </div>
  </div>





  <div class='search-result__item'>
    <h2 class='govuk-heading-m search-result__heading search-result__heading--empty'>There are no matching results</h2>
    <p class='search-result__content search-result__content--empty'>
      
        Choose different answers to see results.
      

      
        <div class="govuk-button-group">
          
  

  
    
  

<button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button" onclick="history.back()">
  Previous question
</button>

          
  

  
    
  

<a href="/date-search" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button" data-do-storage-reset="">
  Restart questionnaire search
</a>

        </div>
      
    </p>
  </div>
"
`;

exports[`Results block template Guided search journey Search results with error should match the results screen snapshot 1`] = `
"



  <p class="govuk-caption-m govuk-!-font-size-14">Unable to fetch the search results. Please try again.</p>






"
`;

exports[`Results block template Quick search journey Search results with data should match the results screen snapshot 1`] = `
"





  <div class='govuk-section-break--visible'>
    <h2 class='govuk-heading-m results-stats'>
      2 results
    </h2>

    <div class="option-container">
      


<div class="govuk-form-group option-group">
  <label class="govuk-label option-label" for="sort">
    Sort by
  </label>


  <select class="govuk-select option-block" id="sort" name="sort">
  
    
      
      
      <option value="best_match">Best match</option>
    
  
    
      
      
      <option value="recent_study">Most recent study</option>
    
  
  </select>
</div>

    </div>
  </div>



  <div class='search-result__items'>
    
      <div class='govuk-section-break--visible search-result__item'>
        <h2 class='govuk-heading-m search-result__heading'>Title 1</h2>
        <div class='search-result__parameter'>
          <span class='search-result__parameter-label search-result__published-label'>Published by</span>
          <span class='search-result__parameter-value search-result__published-value'>Organization 1</span>
        </div>
        
          <div class='search-result__parameter'>
            <span class='search-result__parameter-label search-result__study-label'>Study period</span>
            <span class='search-result__parameter-value search-result__study-value'>
              
                04 Jan 1960
              
            </span>
          </div>
        
        <p class='search-result__content'>
          Content 1
        </p>
        <div class='govuk-button-group search-result__button-group'>
          
  
    
  

<button type="submit" class="govuk-button" data-module="govuk-button">
  Open data
</button>


          
  

  
    
  

<button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
  More info
</button>

        </div>
      </div>
    
      <div class='govuk-section-break--visible search-result__item'>
        <h2 class='govuk-heading-m search-result__heading'>Title 2</h2>
        <div class='search-result__parameter'>
          <span class='search-result__parameter-label search-result__published-label'>Published by</span>
          <span class='search-result__parameter-value search-result__published-value'>Organization 2</span>
        </div>
        
          <div class='search-result__parameter'>
            <span class='search-result__parameter-label search-result__study-label'>Study period</span>
            <span class='search-result__parameter-value search-result__study-value'>
              
                04 Jan 1960 to 12 Jan 2009
              
            </span>
          </div>
        
        <p class='search-result__content'>
          Content 2
        </p>
        <div class='govuk-button-group search-result__button-group'>
          
  
    
  

<button type="submit" class="govuk-button" data-module="govuk-button">
  Open data
</button>


          
  

  
    
  

<button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
  More info
</button>

        </div>
      </div>
    
  </div>


"
`;

exports[`Results block template Quick search journey Search results with empty data should match the results screen snapshot 1`] = `
"





  <div class='govuk-section-break--visible'>
    <h2 class='govuk-heading-m results-stats'>
      0 results found 
    </h2>

    <div class="option-container">
      


<div class="govuk-form-group option-group">
  <label class="govuk-label option-label" for="sort">
    Sort by
  </label>


  <select class="govuk-select option-block" id="sort" name="sort">
  
    
      
      
      <option value="best_match">Best match</option>
    
  
    
      
      
      <option value="recent_study">Most recent study</option>
    
  
  </select>
</div>

    </div>
  </div>





  <div class='search-result__item'>
    <h2 class='govuk-heading-m search-result__heading search-result__heading--empty'>There are no matching results</h2>
    <p class='search-result__content search-result__content--empty'>
      
        Search with different keywords.
      

      
    </p>
  </div>
"
`;

exports[`Results block template Quick search journey Search results with error should match the results screen snapshot 1`] = `
"



  <p class="govuk-caption-m govuk-!-font-size-14">Unable to fetch the search results. Please try again.</p>






"
`;
